--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,14 @@
-<app-root></app-root>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>TradexaPosts</title>
+
+  <base href="/tradexa-posts/">
+
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+  <app-root></app-root>
+</body>
+</html>
